--- a/css/components/_cards.scss
+++ b/css/components/_cards.scss
@@ -4,6 +4,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: flex-end;
+		flex-wrap: wrap;
 		width: 100%;
 
 		a {
